tests/build/cases/widget_new/incorrect_arg_type5.stderr
error[E0308]: mismatched types
  --> cases/widget_new/incorrect_arg_type5.rs:11:27
   |
11 |         simple_type = 42, true
   |                       --  ^^^^ expected `u32`, found `bool`
   |                       |
   |                       arguments to this function are incorrect
   |
note: associated function defined here
  --> cases/widget_new/incorrect_arg_type5.rs:4:1
   |
4  | #[property(context)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
